Fixing broken input

--- a/src/app/settings/settings.component.css
+++ b/src/app/settings/settings.component.css
@@ -26,6 +26,7 @@
     border-radius: 0.25rem;
     box-shadow: 0 0 10px rgba(216, 216, 216, 0.6);
     width: 60%;
+    margin-bottom: 2rem;
 }
 
 .card-body-dark-mode {
@@ -140,9 +141,9 @@
     margin-left: 0.5rem;
 }
 
-.cursor-pointer {
-    color: gray;
+.pointer{
     margin-left: 0.5rem;
+    color: gray;
 }
 
 .d-flex-dark-mode {
